@@ -1,3 +1,6 @@
+March 2012
+- Fixed painting of Windows7/Vista style Explorer selection in case tsUseExplorerTheme is in TreeOptions
+- Ctrl + A now selects all items
 January 2012
  - Bug fix: Fixed a potential access violation in TBaseVirtualTree.FullCollapse in case of toChildrenAbove
 September 2011
